--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <title>Frontend Test</title>
 </head>
 <body>
-    <header>Frontend Test</header>
+    <header>
+        <label>Frontend Test</label>
+    </header>
+
     <div class='container'>
-        <div class='img-container'>
-            <div id='row-1'>
+        <div class='carousel'>
+            <div class='slider-1'>
                 <div class='img img1'>
                     <img src="Assets/slider-image-1.jpeg" alt="">
                 </div>
@@ -28,8 +32,6 @@
                 <div class='img img5'>
                     <img src="Assets/slider-image-5.jpeg" alt="">
                 </div>
-            </div>
-            <div id='row-2'>
                 <div class='img img6'>
                     <img src="Assets/slider-image-6.jpeg" alt="">
                 </div>
@@ -43,6 +45,35 @@
                     <img src="Assets/slider-image-9.jpeg" alt="">
                 </div>
             </div>
+            <div class='slider-2'>
+                <div class='img img3'>
+                    <img src="Assets/slider-image-3.jpeg" alt="">
+                </div>
+                <div class='img img2'>
+                    <img src="Assets/slider-image-2.jpeg" alt="">
+                </div>
+                <div class='img img8'>
+                    <img src="Assets/slider-image-8.jpeg" alt="">
+                </div>
+                <div class='img img4'>
+                    <img src="Assets/slider-image-4.jpeg" alt="">
+                </div>
+                <div class='img img9'>
+                    <img src="Assets/slider-image-9.jpeg" alt="">
+                </div>
+                <div class='img img1'>
+                    <img src="Assets/slider-image-1.jpeg" alt="">
+                </div>
+                <div class='img img6'>
+                    <img src="Assets/slider-image-6.jpeg" alt="">
+                </div>
+                <div class='img img5'>
+                    <img src="Assets/slider-image-5.jpeg" alt="">
+                </div>
+                <div class='img img7'>
+                    <img src="Assets/slider-image-7.jpeg" alt="">
+                </div>
+            </div>
             <div class='arrows-container'>
                 <div id='left-arrow'>
                     <i class="fal fa-chevron-left"></i>
@@ -53,9 +84,15 @@
             </div>
         </div>
         <div class='text-container'>
-            <h1>Title</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, ipsam necessitatibus in voluptatum nam fugit, mollitia fuga ad, iusto facilis voluptas perferendis harum. Magnam omnis praesentium nulla delectus possimus eligendi.</p>
+            <h1>Lorem ipsum dolor sit amet consectetuer adipiscing elit </h1>
+            <p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat.</p>
         </div>
     </div>
+
+    <footer>
+        <label class='copyright'>Copyright &copy; Marin Barać</label>
+    </footer>
+
+    <script src='script.js'></script>
 </body>
 </html>
